--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   
     <div class="row"><img  src="../images/handpointleft.gif"; width="20%"; class="point1" ><button class="styled" type="button" ><a class="link" href="AudraResume .docx.pdf" download="AudraResume";>Download Resume</a></button>
    
-      <img src="../images/handpointright.gif"; width="20%"; class="point1">
+      <img src="./images/handpointright.gif"; width="20%"; class="point1">
    </div>
   
      </h2>
