--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     </div>
    
   
-    <div class="row"><img  src="images/handpointleft.gif"; width="20%"; class="point1" ><button class="styled" type="button" ><a class="link" href="AudraResume .docx.pdf" download="AudraResume";>Download Resume</a></button>
+    <div class="row"><img  src="./images/handpointleft.gif"; width="20%"; class="point1" ><button class="styled" type="button" ><a class="link" href="AudraResume .docx.pdf" download="AudraResume";>Download Resume</a></button>
    
-      <img src="images/handpointright.gif"; width="20%"; class="point1">
+      <img src="./images/handpointright.gif"; width="20%"; class="point1">
    </div>
   
      </h2>
