header footer links
links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <ul >
     <a class="link" style="color:#dd5444;" href="https://audra-ades.github.io/Ux-Ui-Hw17/">About</a>
-    <a >Skills</a>
+    <a class="link" href="https://audra-ades.github.io/Ux-Ui-Hw18/">Skills</a>
     <a class="link" href="https://audra-ades.github.io/Ux-Ui-hw18-mywork/" >Work</a>
     <a class="popup" onclick="myFunction()"> Contact
       <span class="popuptext" id="myPopup">
@@ -101,7 +101,7 @@
     
     <ul class="foot">
       <a style="color:#dd5444;">About</a>
-      <a >Skills</a>
+      <a class="link" href="https://audra-ades.github.io/Ux-Ui-Hw18/">Skills</a>
       <a class="link" href="https://audra-ades.github.io/Ux-Ui-hw18-mywork/" >Work</a>
         
       </a>
