--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html> 
     
 <head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.">
   <link href="css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body style="background-color:#fff8e0; border:black solid 5px; ">
