--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html> 
     
 <head> 
-  <link rel="stylesheet" href="../css/index.css" type="text/css" >
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.">
+  <link rel="stylesheet" href="css/index.css" type="text/css" >
 </head>
 <body style="background-color:#fff8e0; border:black solid 5px; ">
   <script src="js/script.js"></script>
