--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html> 
     
 <head> 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.">
-  <link rel="stylesheet" href="./css/index.css" type="text/css" >
+  <link href="css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body style="background-color:#fff8e0; border:black solid 5px; ">
   <script src="js/script.js"></script>
