--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html> 
     
 <head> 
-  <link href="css/index.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css" type="text/css" >
 </head>
-<body style="background-color:#fff8e0; border:black solid 5px; ">
-  <script src="js/script.js"></script>
+<body style="background-color:#fff8e0; border:black solid 5px;"
+>
 <h1 class="name">
-   <div style="text-align: center;" >
-  <img width= 80%; 
-  src="images/newsheading.gif">
+  <div style="text-align: center;" >
+ <img width= 80%; 
+ src="images/newsheading.gif">
 </h1>
 
 <ul >
