--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
     
 <head> 
-  <link rel="stylesheet" href="css/index.css" type="text/css" >
+  <link rel="stylesheet" href="css/style.css" type="text/css" >
 </head>
 <body style="background-color:#fff8e0; border:black solid 5px;"
 >
