--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html> 
     
 <head> 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-172XDF1NH7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-172XDF1NH7');
+</script>
   
   <link rel="stylesheet" href="css/style.css" type="text/css" >
 </head>
