--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     
 <head> 
   <link href="https://fonts.cdnfonts.com/css/old-london" rel="stylesheet">
- 
+  
+  <link href="https://fonts.cdnfonts.com/css/kg-let-her-go" rel="stylesheet">
+  <style>
+    @import url('https://fonts.cdnfonts.com/css/kg-let-her-go');
+</style>
 
 
 <!-- Google tag (gtag.js) -->
