--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <footer>
     
     <ul class="foot">
-      <a style="color:#dd5444;">About</a>
+      <a style="color:#dd5444;" class="link" href="https://audra-ades.github.io/Ux-Ui-Hw17/">About</a>
       <a class="link" href="https://audra-ades.github.io/Ux-Ui-Hw18/">Skills</a>
       <a class="link" href="https://audra-ades.github.io/Ux-Ui-hw18-mywork/" >Work</a>
         
